--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         <form action="">
           <input type="text" placeholder="Adresse e-mail ou numéro de tel" />
           <input type="password" placeholder="Mot de passe" />
-          <input type="submit">Se connecter</input>
-          <p>
-            <a href="http://" target="_blank" class="lien"
-              >Mot de passe oublié</a
-            >
-          </p>
+          <input type="submit" value="Se connecter" />
+
+          <a class="mot_de_passe" href="http://" target="_blank" class="lien"
+            >Mot de passe oublié ?</a
+          >
+
           <hr />
-          <p><a href="#">Créer nouveau compte</a></p>
-          <p>
-            Créer une Page pour une Célébrité, Une marque ou une entreprise.
-          </p>
+          <br />
+          <a href="index1.html" class="button">Créer nouveau compte</a>
         </form>
+        <p>
+          <strong>Créer une Page</strong> pour une Célébrité, Une marque ou une
+          entreprise.
+        </p>
       </div>
     </div>
   </body>
