--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <hr />
           <br />
-          <a href="index1.html" class="button">Créer nouveau compte</a>
+          <a href="inscription.html" class="button">Créer nouveau compte</a>
         </form>
         <p>
           <strong>Créer une Page</strong> pour une Célébrité, Une marque ou une
